conclusao do html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
     </header>
-    <!-- Conteudo principal -->
+    <!-- Conteudo principal  - SERVIÇOS -->
     <main class="services-container">
         <h2>O que fazemos</h2>
         <div class="services-card-container">
@@ -111,9 +111,10 @@
             <a href="#" class="btn btn-primary btn rounded">Veja todos nossos Serviços</a>
         </div>
     </main>
+    <!-- jobs - portifolios -->
     <div class="jobs-containers">
         <h2>Alguns de nossos Trabalhos </h2>
-        <div class="job-lists">
+        <div class="job-lists"> 
             <div class="first-job" id="Job1">
                 <div class="job-card-cover">
                     <p class="job-card-title">Projeto 1</p>
@@ -126,7 +127,7 @@
             <div class="other-jobs-container">
                 <div class="first-job" id="Job2">
                     <div class="job-card-cover">
-                        <p class="job-card-title">Projeto 1</p>
+                        <p class="job-card-title">Projeto 2</p>
                         <p class="job-card-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
                             molestias ipsam sequi minima ut reiciendis labore maiores incidunt iure, in perspiciatis,
                             eveniet assumenda nobis quis nesciunt aliquam aliquid ipsa quod!</p>
@@ -135,7 +136,7 @@
                 </div>
                 <div class="first-job" id="Job3">
                     <div class="job-card-cover">
-                        <p class="job-card-title">Projeto 1</p>
+                        <p class="job-card-title">Projeto 3</p>
                         <p class="job-card-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
                             molestias ipsam sequi minima ut reiciendis labore maiores incidunt iure, in perspiciatis,
                             eveniet assumenda nobis quis nesciunt aliquam aliquid ipsa quod!</p>
@@ -144,7 +145,7 @@
                 </div>
                 <div class="first-job" id="Job4">
                     <div class="job-card-cover">
-                        <p class="job-card-title">Projeto 1</p>
+                        <p class="job-card-title">Projeto 4</p>
                         <p class="job-card-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
                             molestias ipsam sequi minima ut reiciendis labore maiores incidunt iure, in perspiciatis,
                             eveniet assumenda nobis quis nesciunt aliquam aliquid ipsa quod!</p>
@@ -153,7 +154,7 @@
                 </div>
                 <div class="first-job" id="Job5">
                     <div class="job-card-cover">
-                        <p class="job-card-title">Projeto 1</p>
+                        <p class="job-card-title">Projeto 5</p>
                         <p class="job-card-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non
                             molestias ipsam sequi minima ut reiciendis labore maiores incidunt iure, in perspiciatis,
                             eveniet assumenda nobis quis nesciunt aliquam aliquid ipsa quod!</p>
@@ -167,6 +168,107 @@
             </div>
         </div>
     </div>
+    <!-- footer - rodape -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-desc-container">
+                <h3 class="footer-title">Agency</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt optio eveniet placeat iste, architecto ipsam similique at officiis ab, soluta deserunt aspernatur repellendus facilis repellat eaque nihil tenetur molestias magni!</p>
+            
+            </div>
+            <div class="footer-links-container">
+                <div class="footer-links-container-list">
+                    <p class="footer-titles">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de Conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conosco</a>
+                        </li>
+                        <li>
+                            <a href="#">Ultimos Projetoss</a>
+                        </li>
+                        <li>
+                            <a href="#">Politica de Privacidade</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-links-container-list">
+                    <p class="footer-titles">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de Conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conosco</a>
+                        </li>
+                        <li>
+                            <a href="#">Ultimos Projetoss</a>
+                        </li>
+                        <li>
+                            <a href="#">Politica de Privacidade</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-links-container-list">
+                    <p class="footer-titles">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de Conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conosco</a>
+                        </li>
+                        <li>
+                            <a href="#">Ultimos Projetoss</a>
+                        </li>
+                        <li>
+                            <a href="#">Politica de Privacidade</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-links-container-list">
+                    <p class="footer-titles">Links</p>
+                    <ul>
+                        <li>
+                            <a href="#">Base de Conhecimentos</a>
+                        </li>
+                        <li>
+                            <a href="#">Trabalhe conosco</a>
+                        </li>
+                        <li>
+                            <a href="#">Ultimos Projetoss</a>
+                        </li>
+                        <li>
+                            <a href="#">Politica de Privacidade</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </div>
+            <div class="footer-copy-right-contaneir">
+                <p>&copy;2022 Agency</p>
+                <p>A melhor agencia Web para seus Projetos</p>
+            </div>
+
+
+
+        </div>
+    </footer>
 
 
 </body>
