instalado extençãolive sass e alterado dir css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Folha de estilos -->
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/sass/styles.css">
     <title>Agency</title>
 </head>
 
