--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
     crossorigin="anonymous" />
   <!-- CSS do projeto -->
-  <link rel="stylesheet" href="/sass/styles.css">
+  <link rel="stylesheet" href="sass/styles.css">
 </head>
 
 <body>
