iniciado modificação para agency lanzautomação

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agency</title>
+  <meta name="description" content="A Melhor Agencia Web da Cidade ">
+  <meta name="author" content="Marcos Lanzoni - email : marcoslanzoni@gmail.com - 015-99708-3363">
+  <meta name="keywords" content="vendas on line , sites , site , e-commerce , loja virtual . vender mais na internet , como vender na internet ">
+  <title>Agency LanzAutomacao</title>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;0,900;1,300;1,700;1,900&display=swap"
@@ -22,7 +25,7 @@
   <header id="main-banner">
     <div class="nav-container">
       <a href="#" class="brand">
-        <i class="fas fa-brain"></i> Agency
+        <i class="fas fa-brain"></i> Agency Lanz Automação
       </a>
       <nav>
         <ul class="nav-container-navbar">
@@ -30,92 +33,110 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#">Serviços</a>
+            <a href="#serviços">Serviços</a>
           </li>
           <li>
-            <a href="#">Contato</a>
+            <a href="#contato">Contato</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="#" class="btn btn-primary">Entrar</a>
           </li>
           <li>
             <a href="#" class="btn">Registrar</a>
           </li>
-        </ul>
+        </ul> -->
       </nav>
       <i class="fas fa-bars"></i>
     </div>
     <div class="title-container">
       <h2>Nós desenvolvemos</h2>
       <h1>Poderosas Experiências</h1>
-      <a href="#" class="btn btn-primary btn-rounded">Fazer Orçamento</a>
+     
+      <a href="https://api.whatsapp.com/send?1=pt_br&phone=+5515997083363&text=Olá, gostaria de fazer um orçamento!" class="btn btn-primary btn-rounded" target="_blank">Fazer Orçamento</a>
     </div>
   </header>
   <!-- Serviços -->
-  <main class="services-container">
+  <main id="serviços" class="services-container">
     <h2>O que fazemos</h2>
     <div class="services-card-container">
       <div class="services-card">
         <i class="fab fa-buffer"></i>
         <h3>Desenvolvimento full stack</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis harum tempore eaque aliquid. Asperiores
-          quisquam voluptas praesentium doloribus expedita ea non sunt, distinctio possimus, consequuntur laudantium
-          dicta officiis dignissimos odit.</p>
+        <p>Desenvolvemos seu site deste inicio ,projeto completo , front-and e back -and </p>
       </div>
       <div class="services-card">
         <i class="fas fa-bolt"></i>
         <h3>Sites leves e rápidos</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis harum tempore eaque aliquid. Asperiores
-          quisquam voluptas praesentium doloribus expedita ea non sunt, distinctio possimus, consequuntur laudantium
-          dicta officiis dignissimos odit.</p>
+        <p>Site rapidos , e leves , não deixe seu cliente esperando , torne sua navegação rapida e agradavel</p>
       </div>
       <div class="services-card">
         <i class="fas fa-cart-plus"></i>
         <h3>E-commerces</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis harum tempore eaque aliquid. Asperiores
-          quisquam voluptas praesentium doloribus expedita ea non sunt, distinctio possimus, consequuntur laudantium
-          dicta officiis dignissimos odit.</p>
+        <p>Tenha sua loja virtual , efetue vendas a qualquer momento em qualquer hora
+        </p>
       </div>
       <div class="services-card">
         <i class="fas fa-chart-line"></i>
         <h3>SEO</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis harum tempore eaque aliquid. Asperiores
-          quisquam voluptas praesentium doloribus expedita ea non sunt, distinctio possimus, consequuntur laudantium
-          dicta officiis dignissimos odit.</p>
+        <p>Seja achado pelo maior buscador , indexação no Google rapida e eficiente</p>
       </div>
       <div class="services-card">
         <i class="fas fa-chess-pawn"></i>
         <h3>Estratégias de Marketing</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis harum tempore eaque aliquid. Asperiores
-          quisquam voluptas praesentium doloribus expedita ea non sunt, distinctio possimus, consequuntur laudantium
-          dicta officiis dignissimos odit.</p>
+        <p>Quer vender mais ? Então temos as estratégias certas para você !</p>
       </div>
       <div class="services-card">
         <i class="fas fa-cloud"></i>
-        <h3>Hospedagem AWS/Azure</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis harum tempore eaque aliquid. Asperiores
-          quisquam voluptas praesentium doloribus expedita ea non sunt, distinctio possimus, consequuntur laudantium
-          dicta officiis dignissimos odit.</p>
+        <h3>Hospedagem</h3>
+        <p>Planos com hospedagem propria ou de livre escolha por você !</p>
       </div>
     </div>
-    <a href="#" class="btn btn-primary btn-rounded">Veja todos os Serviços</a>
+    <!-- <a href="#" class="btn btn-primary btn-rounded">Veja todos os Serviços</a> -->
   </main>
   <!-- Jobs -->
+  <!-- TODO corrigir as classes dos containers para separar as imagens  -->
+    <!-- TODO criar botão para cada card de wathasapp  -->
   <div class="jobs-container">
-    <h2>Alguns de nossos trabalhos</h2>
+    <h2>Promoção !</h2>
     <div class="jobs-list">
       <div class="first-job" id="job1">
         <div class="job-card-cover">
-          <p class="job-card-title">Projeto 1</p>
-          <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet maxime
-            nostrum quaerat. Nihil officia similique excepturi voluptas perspiciatis, odit veritatis cum, dolores
-            adipisci deserunt deleniti nemo repellendus optio eius.</p>
+          <p class="job-card-title">Plano Básico</p>
+          <p class="job-card-description">Site OnePage a partir<br><span>R$299,90</span>.</p>
+          <p class="job-card-description">Hospedagem Inclusa</p>
+          <p class="job-card-description">Dominio a partir de R$40,00 anuais</p>
         </div>
       </div>
-      <div class="other-jobs-container">
+      <div class="first-job" id="job2">
+        <div class="job-card-cover">
+          <p class="job-card-title">Plano-Basico 1</p>
+          <p class="job-card-description">Site OnePage a partir<br><span>R$299,90</span>.</p>
+          <p class="job-card-description">Hospedagem Inclusa</p>
+          <p class="job-card-description">Dominio a partir de R$40,00 anuais</p>
+          <p class="job-card-description">Plano de Manutenção Mensal a partir de <span>R$80,00</span></p>
+        </div>
+      </div>
+      <div class="first-job" id="job3">
+        <div class="job-card-cover">
+          <p class="job-card-title">Plano Master</p>
+          <p class="job-card-description">Site OnePage a partir<br><span>R$299,90</span>.</p>
+          <p class="job-card-description">Hospedagem Inclusa</p>
+          <p class="job-card-description">Dominio a partir de R$40,00 anuais</p>
+          <p class="job-card-description">Plano de Manutenção Mensal <br>Plano de Markting Digital Mensal<br> A partir de <span>R$140,00</span><br>Plano Google Ads a partir de R$60,00 mensais</p>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+      <!-- <div class="other-jobs-container">
         <div class="job-card" id="job2">
           <div class="job-card-cover">
-            <p class="job-card-title">Projeto 2</p>
+            <p class="job-card-title">Promo-2</p>
             <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet maxime
               nostrum quaerat. Nihil officia similique excepturi voluptas perspiciatis, odit veritatis cum, dolores
               adipisci deserunt deleniti nemo repellendus optio eius.</p>
@@ -123,28 +144,28 @@
         </div>
         <div class="job-card" id="job3">
           <div class="job-card-cover">
-            <p class="job-card-title">Projeto 3</p>
+            <p class="job-card-title">Promo-3</p>
             <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet maxime
               nostrum quaerat. Nihil officia similique excepturi voluptas perspiciatis, odit veritatis cum, dolores
               adipisci deserunt deleniti nemo repellendus optio eius.</p>
           </div>
-        </div>
-        <div class="job-card" id="job4">
+        </div> -->
+        <!-- <div class="job-card" id="job4">
           <div class="job-card-cover">
             <p class="job-card-title">Projeto 4</p>
             <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet maxime
               nostrum quaerat. Nihil officia similique excepturi voluptas perspiciatis, odit veritatis cum, dolores
               adipisci deserunt deleniti nemo repellendus optio eius.</p>
-          </div>
-        </div>
-        <div class="job-card" id="job5">
+          </div> -->
+        <!-- </div> -->
+        <!-- <div class="job-card" id="job5">
           <div class="job-card-cover">
             <p class="job-card-title">Projeto 5</p>
             <p class="job-card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet maxime
               nostrum quaerat. Nihil officia similique excepturi voluptas perspiciatis, odit veritatis cum, dolores
               adipisci deserunt deleniti nemo repellendus optio eius.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -152,13 +173,52 @@
   <footer>
     <div class="footer-container">
       <div class="footer-desc-container">
-        <h3 class="footer-title">Agency</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quibusdam obcaecati dolorem libero, dolor
-          eveniet, pariatur tenetur quisquam dicta nulla facilis impedit ad omnis magnam iusto ipsam architecto!
-          Recusandae, dolore?</p>
+        <h3 class="footer-title">Agency-Lanz Automação</h3>
+        <p>JÁ PENSOU EM AUMENTAR SUAS VENDAS ? TER SEU PRODUTO OU SERVIÇO RECONHECIDO PELO MERCADO ?</p>
+        <p>Não perca tempo entre em contato agora !</p>
       </div>
       <div class="footer-links-container">
         <div class="footer-links-container-list">
+          <p id="contato" class="footer-title">Contatos</p>
+          <ul>
+            <li>
+              <a href="tel:+5515997083363">Tel : (15)99708-3363</a>
+            </li>
+            <!-- <li>
+              <a href="#">Trabalhe Conosco</a>
+            </li> -->
+            <li>
+              <a href="mailto:marcoslanzoni@gmail.com">Email : marcoslanzoni@gmail.com</a>
+            </li>
+            <!-- <li>
+              <a href="#">Política de Privacidade</a>
+            </li> -->
+            <!-- <li>
+              <a href="#">Contato</a>
+            </li> -->
+          </ul>
+        </div>
+        <!-- <div class="footer-links-container-list">
+          <p class="footer-title">Links</p> -->
+        <!-- <ul>
+            <li>
+              <a href="#">Base de conhecimentos</a>
+            </li>
+            <li>
+              <a href="#">Trabalhe Conosco</a>
+            </li>
+            <li>
+              <a href="#">Últimos Projetos</a>
+            </li>
+            <li>
+              <a href="#">Política de Privacidade</a>
+            </li>
+            <li>
+              <a href="#">Contato</a>
+            </li>
+          </ul> -->
+        <!-- </div> -->
+        <!-- <div class="footer-links-container-list">
           <p class="footer-title">Links</p>
           <ul>
             <li>
@@ -177,50 +237,10 @@
               <a href="#">Contato</a>
             </li>
           </ul>
-        </div>
-        <div class="footer-links-container-list">
-          <p class="footer-title">Links</p>
-          <ul>
-            <li>
-              <a href="#">Base de conhecimentos</a>
-            </li>
-            <li>
-              <a href="#">Trabalhe Conosco</a>
-            </li>
-            <li>
-              <a href="#">Últimos Projetos</a>
-            </li>
-            <li>
-              <a href="#">Política de Privacidade</a>
-            </li>
-            <li>
-              <a href="#">Contato</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-links-container-list">
-          <p class="footer-title">Links</p>
-          <ul>
-            <li>
-              <a href="#">Base de conhecimentos</a>
-            </li>
-            <li>
-              <a href="#">Trabalhe Conosco</a>
-            </li>
-            <li>
-              <a href="#">Últimos Projetos</a>
-            </li>
-            <li>
-              <a href="#">Política de Privacidade</a>
-            </li>
-            <li>
-              <a href="#">Contato</a>
-            </li>
-          </ul>
-        </div>
+        </div> -->
       </div>
       <div class="footer-copy-right-container">
-        <p>&copy; 2022 Agency</p>
+        <p>&copy; 2022 Agency LanzAutomação - </p>
         <p>A melhor agência web para seus projetos</p>
       </div>
     </div>
