corrigido altura cars mobile e desk

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
           <p class="job-card-title">Plano Básico</p>
           <p class="job-card-description">Site OnePage a partir<br><span>R$299,90</span>.</p>
           <p class="job-card-description">Hospedagem Inclusa</p>
-          <p class="job-card-description">Dominio a partir de R$40,00 anuais</p>
+          <p class="job-card-description">Dominio a partir de R$40,00 anuais</p><br>
+          
         </div>
       </div>
       <div class="first-job" id="job2">
@@ -169,6 +170,7 @@
       </div>
     </div>
   </div>
+
   <!-- Footer -->
   <footer>
     <div class="footer-container">
